third_party/rust/pin-project-lite/tests/ui/pinned_drop/call-drop-inner.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/call-drop-inner.rs:10:13
   |
10 |             __drop_inner(this);
   |             ^^^^^^^^^^^^ ---- supplied 1 argument
   |             |
   |             expected 0 arguments
   |
note: function defined here
  --> $DIR/call-drop-inner.rs:3:1
   |
3  | / pin_project! {
4  | |     pub struct S {
5  | |         #[pin]
6  | |         field: u8,
...  |
12 | |     }
13 | | }
   | |_^
   = note: this error originates in the macro `$crate::__pin_project_internal` (in Nightly builds, run with -Z macro-backtrace for more info)
